# DanMMaku

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: node.js.yml  rust.yml
public/: index.html
src/: index.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  tts.js  websocket_forwarder.rs
src/lib/: PluginManager.js  WsUtils.js  referrer-killer.js
src/pages/: DanmmakuWin.js  Injector.js  Main.css  Main.js  Main.less  PluginSettings.js  Settings.css  Settings.js  Settings.less  Universal.css  pluginSettings.css  pluginSettings.less
