[package]
name = "DanMMaku"
version = "0.1.7"
description = "A bilibili live danmaku reader."
authors = ["MicroBlock"]
license = ""
repository = ""
default-run = "DanMMaku"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.2", features = ["api-all", "devtools"] }
directories = "4.0.1"
open = "3.0.1"
unzpack = "0.1.0"
download_rs_reborned = "0.2.1"
url = "2.2.2"
ws = "0.9.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release.package.wry]
debug = true
debug-assertions = true
